--- a/index.html
+++ b/index.html
@@ -1,56 +1,68 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Location Tracker</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Location Tracker</title>
+    
+    <!-- Firebase SDK -->
+    <script type="module">
+        // Import Firebase SDKs
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
+        import { getFirestore, collection, addDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
+
+        // 🔹 Firebase Config
+        const firebaseConfig = {
+            apiKey: "AIzaSyDiKFX20cKkhHU0OkAVw6Dv45lWUT7oz5Y",
+            authDomain: "lucation1t.firebaseapp.com",
+            projectId: "lucation1t",
+            storageBucket: "lucation1t.firebasestorage.app",
+            messagingSenderId: "36109638018",
+            appId: "1:36109638018:web:04733eb656519311e7979b",
+            measurementId: "G-9BK23ZBMT6"
+        };
+
+        // 🔹 Firebase Initializing
+        const app = initializeApp(firebaseConfig);
+        window.db = getFirestore(app); // Make db accessible globally
+    </script>
 </head>
 <body>
-  <h1>Location Tracker</h1>
-  <p>Click the button below to share your location and device information.</p>
-  <button onclick="getUserData()">Share Info</button>
-  <p id="demo"></p>
+    <h1>📍 লোকেশন ট্র্যাকার</h1>
+    <button onclick="saveUserData()">📍 আমার লোকেশন সংরক্ষণ করুন</button>
+    
+    <script>
+        // 🔹 লোকেশন সংগ্রহ ও Firestore-এ পাঠানোর ফাংশন
+        async function saveUserData() {
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(async (position) => {
+                    const latitude = position.coords.latitude;
+                    const longitude = position.coords.longitude;
+                    const userAgent = navigator.userAgent;
 
-  <script>
-    function getUserData() {
-      if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(showPosition, showError);
-      } else {
-        document.getElementById("demo").innerHTML = "Geolocation is not supported by this browser.";
-      }
+                    // 🔹 ইউজারের আইপি সংগ্রহ
+                    const ipResponse = await fetch('https://api.ipify.org?format=json');
+                    const ipData = await ipResponse.json();
+                    const ipAddress = ipData.ip;
 
-      const deviceInfo = {
-        userAgent: navigator.userAgent,
-        platform: navigator.platform,
-        language: navigator.language,
-        screenWidth: window.screen.width,
-        screenHeight: window.screen.height,
-      };
-
-      fetch('https://api.ipify.org?format=json')
-        .then(response => response.json())
-        .then(data => {
-          const ipAddress = data.ip;
-          document.getElementById("demo").innerHTML += `<br>IP Address: ${ipAddress}`;
-        });
-
-      document.getElementById("demo").innerHTML = `
-        Device Info: <br>
-        User Agent: ${deviceInfo.userAgent} <br>
-        Platform: ${deviceInfo.platform} <br>
-        Language: ${deviceInfo.language} <br>
-        Screen Resolution: ${deviceInfo.screenWidth}x${deviceInfo.screenHeight} <br>
-      `;
-    }
-
-    function showPosition(position) {
-      const latitude = position.coords.latitude;
-      const longitude = position.coords.longitude;
-      document.getElementById("demo").innerHTML += `<br>Location: <a href="https://www.google.com/maps?q=${latitude},${longitude}" target="_blank">View on Google Maps</a>`;
-    }
-
-    function showError(error) {
-      document.getElementById("demo").innerHTML = "Error getting location: " + error.message;
-    }
-  </script>
+                    try {
+                        // 🔹 Firestore-এ ডাটা সংরক্ষণ
+                        await addDoc(collection(window.db, "users_data"), {
+                            latitude: latitude,
+                            longitude: longitude,
+                            ip_address: ipAddress,
+                            device_info: userAgent,
+                            timestamp: serverTimestamp()
+                        });
+                        alert("✅ তথ্য সফলভাবে সংরক্ষণ হয়েছে!");
+                    } catch (error) {
+                        console.error("❌ ডাটা সংরক্ষণে সমস্যা:", error);
+                    }
+                });
+            } else {
+                alert("❌ আপনার ব্রাউজার Geolocation সাপোর্ট করে না!");
+            }
+        }
+    </script>
 </body>
 </html>
